*	Better treatment of daylight saving time in cutData,
	timeVariation and polarAnnulus (allow any local time zone to be used;
	was just GMT/BST befote)
*	Remove existing date-based columns in cutData to ensure date
	is used instead
* 	Allow users to shade/not shade alternate years in smoothTrend
	and TheilSen
*	Do not smooth percentileRose by wind direction by default.

Changes in openair 0.9-0 [2013-02-13]
=====================================
*	Fix bug introduced in 0.8-0 for scatterPlot surfaces
*	Add statistic and percentile option to polarAnnulus; allow
	Conditional Probability Functions
*	Allow percentile intervals to be considered in polarPlot when
	statistic = "cpf"
*	Correct calculation of AOT40 in aqStats to take account of
	daylight hours and growing season (Apr. to Sep.). Can use
	latitude/longitude, if supplied
*	Fix bug in aqStats when non predefined pollutant used
*	Allow log10 factor of 2 lines in scatterPlot when x and/or
	y are on a log scale
*	Allow users to supply own transform/inverse functions to hexbin
*	Don't try and pad-out missing data in rollingMean when
	returning results
*	Make latticeExtra a 'depends'
*	Don't copy-down data by default in timeAverage when requested
	averaging time is < original. Better handling when 'site' is
	present
*	Update AURN help file site information; add site type
*	Show where data removed when min.bin > 1 for polarPlot
*	Add 'trim' value to percentiles in polarPlot to extract more
	source information.
*	Add 'weights' argument to polarPlot to down-weight bins with
	few data points - alternative to min.bin
*	Use more wd sectors for surface modelling when wd is not
	already rounded to 10 degree intervals in polarPlot
*	Fix bug in timePlot when pch supplied and group = TRUE.
*	Add Air Quality Standard for O3 in aqStats (days >120 ug/m3)
	not to be exceeded more than 10 days a year.
*	Add max.freq option to windRose/pollutionRose to control
	extent of radial limits