@@ -31,6 +31,7 @@ Changes in openair 1.0-0 [2013-11-21]
 * 	Allow users to shade/not shade alternate years in smoothTrend
 	and TheilSen
 *	Do not smooth percentileRose by wind direction by default.
+* Add option 'wd' to percentileRose
 
 Changes in openair 0.9-0 [2013-02-13]
 =====================================
